# reddit_aita_post_analysis

./: .gitignore  README.md  praw_template.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reddit_aita_post_analysis/: util.py  visualization.py
src/: util.py  visualization.py
tests/: test_data_collection.py
